--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -4,17 +4,17 @@ on: [push]
 
 jobs:
   ci-job:
-    runs-on: ${{ matrix.os }}
+    runs-on: windows-latest
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-latest, windows-2019]
         build-type: [Debug, Release]
         target: [x64, Win32, ARM, ARM64]
+        toolset: [v141, v142, v143]
     steps:
     - uses: actions/checkout@v2
     - name: ci-step
       shell: bash
       run: |
-        ./ci.sh "-A|${{ matrix.target }}|-DCMAKE_BUILD_TYPE=${{ matrix.build-type }}" \
+        . ci.sh "-A|${{ matrix.target }}|-T|${{ matrix.toolset }}|-DCMAKE_BUILD_TYPE=${{ matrix.build-type }}" \
            "--config|${{ matrix.build-type }}" "--build-config|${{ matrix.build-type }}"
