--- a/.github/workflows/ci-android.yml
+++ b/.github/workflows/ci-android.yml
@@ -26,6 +26,7 @@ jobs:
     - name: ci-step
       env:
         ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
+        CI_MAKE_TARGET: ""
       shell: bash
       run: |
         . ci.sh "-DANDROID_ABI=${{ matrix.target }}|-DCMAKE_TOOLCHAIN_FILE:PATH=${{ steps.setup-ndk.outputs.ndk-path }}/build/cmake/android.toolchain.cmake|-DCMAKE_BUILD_TYPE=${{ matrix.build-type }}"
