--- a/.github/workflows/ci-mingw.yml
+++ b/.github/workflows/ci-mingw.yml
@@ -14,6 +14,8 @@ jobs:
       matrix:
         os: [windows-latest]
         build-type: [Debug, Release]
+        dll: [ON, OFF]
+        without_crt: [ON, OFF]
     steps:
     - uses: actions/checkout@v4
     - name: Update mingw64
@@ -22,4 +24,8 @@ jobs:
       shell: bash
       run: |
         export "PATH=/c/ProgramData/mingw64/mingw64/bin:$PATH" && \
-        . ci.sh "-G|MinGW Makefiles|-DCMAKE_BUILD_TYPE=${{ matrix.build-type }}"
+        export "PATH=/c/programdata/mingw64/mingw64/bin:$PATH" && \
+        export CI_MAKE_TARGET=$(if [ "${{ matrix.build-type }}" != 'Debug' ]; then echo 'test'; else echo 'smoke'; fi) && \
+        export MDBX_BUILD_OPTIONS=$(if [ "${{ matrix.build-type }}" = 'Debug' ]; then echo '-DMDBX_FORCE_ASSERTIONS'; else echo '-DNDEBUG=1'; fi) && \
+        export MDBX_BUILD_CXX=$(if [ "${{ matrix.without_crt }}" = 'OFF' ]; then echo 'YES'; else echo 'NO'; fi) && \
+        . ci.sh "-G|MinGW Makefiles|-DCMAKE_BUILD_TYPE=${{ matrix.build-type }}|-DMDBX_BUILD_SHARED_LIBRARY:BOOL=${{ matrix.dll }}|-DMDBX_WITHOUT_MSVC_CRT:BOOL=${{ matrix.without_crt }}"
