--- a/.github/workflows/old-gcc.yml
+++ b/.github/workflows/old-gcc.yml
@@ -17,6 +17,7 @@ jobs:
         ls -l
         id
         (which lsb_release && lsb_release -a) || true
+        apt-get update
         apt-get install build-essential cmake git
         cmake --version || pip install cmake || true
         gcc -v || true
