--- a/.github/workflows/old-gcc.yml
+++ b/.github/workflows/old-gcc.yml
@@ -17,8 +17,8 @@ jobs:
         ls -l
         id
         (which lsb_release && lsb_release -a) || true
-        apt-get update
-        apt-get install build-essential cmake git
+        apt-get update -y
+        apt-get install -y build-essential cmake git
         cmake --version || pip install cmake || true
         gcc -v || true
         make --version || true
