--- a/.github/workflows/ci-posix.yml
+++ b/.github/workflows/ci-posix.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, ubuntu-18.04, macos-10.15]
+        os: [ubuntu-22.04, macos-12, ubuntu-20.04, macos-11]
         build-type: [Debug, Release]
     steps:
     - uses: actions/checkout@v2
