--- a/.github/workflows/ci-old-gcc.yml
+++ b/.github/workflows/ci-old-gcc.yml
@@ -8,11 +8,11 @@ jobs:
     container:
       image: library/gcc:4
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: update-ssl-certs
       shell: bash
       run: ./update-ssl-certs.sh
-    - name: ci
+    - name: ci-step
       shell: bash
       run: ./ci.sh
   gcc-5:
@@ -20,11 +20,11 @@ jobs:
     container:
       image: library/gcc:5
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: update-ssl-certs
       shell: bash
       run: ./update-ssl-certs.sh
-    - name: ci
+    - name: ci-step
       shell: bash
       run: ./ci.sh
   gcc-6:
@@ -32,11 +32,11 @@ jobs:
     container:
       image: library/gcc:6
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: update-ssl-certs
       shell: bash
       run: ./update-ssl-certs.sh
-    - name: ci
+    - name: ci-step
       shell: bash
       run: ./ci.sh
   gcc-7:
@@ -44,11 +44,11 @@ jobs:
     container:
       image: library/gcc:7
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: update-ssl-certs
       shell: bash
       run: ./update-ssl-certs.sh
-    - name: ci
+    - name: ci-step
       shell: bash
       run: ./ci.sh
   gcc-8:
@@ -56,11 +56,11 @@ jobs:
     container:
       image: library/gcc:8
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: update-ssl-certs
       shell: bash
       run: ./update-ssl-certs.sh
-    - name: ci
+    - name: ci-step
       shell: bash
       run: ./ci.sh
   gcc-9:
@@ -68,10 +68,10 @@ jobs:
     container:
       image: library/gcc:9
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: update-ssl-certs
       shell: bash
       run: ./update-ssl-certs.sh
-    - name: ci
+    - name: ci-step
       shell: bash
       run: ./ci.sh
