--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -4,13 +4,19 @@ on: [push]
 
 jobs:
   ci-job:
-    runs-on: windows-latest
     strategy:
       fail-fast: false
       matrix:
+        os: [windows-latest, windows-2019]
         build-type: [Debug, Release]
         target: [x64, Win32, ARM, ARM64]
         toolset: [v141, v142, v143]
+        exclude:
+          - os: windows-latest
+            toolset: v141
+          - os: windows-2019
+            toolset: v143
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
     - name: ci-step
