--- a/.github/workflows/ci-posix.yml
+++ b/.github/workflows/ci-posix.yml
@@ -1,5 +1,9 @@
 name: ci-posix
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
+  cancel-in-progress: true
+
 on: [push]
 
 jobs:
