--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-latest, windows-2019]
-        build-type: [Debug, Release]
+        build-type: [Debug, RelWithDebInfo]
         target: [x64, Win32, ARM, ARM64]
         toolset: [v141, v142, v143]
         dll: [ON, OFF]
